--- a/upsell/index.html
+++ b/upsell/index.html
@@ -56,9 +56,9 @@
             
             </p>
           <br>
-          <p class="lead">Felicitaciones por tomar la decisión más inteligente que pudo haber tomado y comprar el Protocolo Cero Grasa hoy. </p>
+          <p class="lead">Felicitaciones por tomar la decisión más inteligente que pudo haber tomado y comprar el Protocolo Anti Grasa hoy. </p>
           <br>
-          <p class="lead">El Protocolo Cero Grasa le dará todo lo que necesita para comenzar el viaje que le hará más delgada (o) , sexy y joven que nunca. </p>
+          <p class="lead">El Protocolo Anti Grasa le dará todo lo que necesita para comenzar el viaje que le hará más delgada (o) , sexy y joven que nunca. </p>
           <br>
           <p class="lead">Ahora ya sabe que para acelerar su metabolismo, necesita activar tu tejido antigrasa.</p>
           <br>
@@ -122,11 +122,11 @@
           </p>
           <br>
           <p class="lead">
-            Cumplir el plan del Protocolo Cero Grasa es fundamental para seguir activando el tejido antigrasa, perder kilos en la balanza y mantenerse en su peso ideal... 
+            Cumplir el plan del Protocolo Anti Grasa es fundamental para seguir activando el tejido antigrasa, perder kilos en la balanza y mantenerse en su peso ideal... 
           </p>
           <br>
           <p class="lead">
-            Pero también hay que seguir otros procesos que son muy simples para acabar con las celulitis y la flacidez, así que hablé con el Dr Alejandro y decidimos crear un plan completo y simple para acabar con las celulitis y la flacidez... 
+            Pero también hay que seguir otros procesos que son muy simples para acabar con las celulitis y la flacidez, así que hablé con el Dr John y decidimos crear un plan completo y simple para acabar con las celulitis y la flacidez... 
           </p>
           <br>
           <p class="lead">
@@ -142,7 +142,7 @@
           </p>
           <br>
           <p class="lead font-weight-bold fonte1 text-center">El fin de la celulites y la flacidez  <br>
-            del Dr. Alejandro
+            del Dr. John
           </p>
           <br>
           <img src="ebook.png" style="width:100%">
@@ -194,7 +194,7 @@
             Y cómo está en juego su satisfacción aquí… 
           </p>
           <br>
-          <p class="lead font-weight-bold">El Dr. Alejandro ha decidido hacer algo realmente loco... </p>
+          <p class="lead font-weight-bold">El Dr. John ha decidido hacer algo realmente loco... </p>
           <br>
           <p class="lead">
             Va a ofrecer este plan ÚNICO para acabar con las celulits y la flacidez... 
@@ -217,7 +217,7 @@
             Hoy, y solo a través de esta página… 
           </p>
           <br>
-          <p class="lead">Puede tener acceso completo al Programa El fin de la celulites y la flacidez del Dr. Alejandro, por sólo <b class="font-weight-bold">$17.</b> </p>
+          <p class="lead">Puede tener acceso completo al Programa El fin de la celulites y la flacidez del Dr. John, por sólo <b class="font-weight-bold">$17.</b> </p>
           <br>
           <p class="lead">
             ¡Lo que, en comparación con el precio normal, significa más del 80% de descuento! 
@@ -232,7 +232,7 @@
           </p>
           <br>
           <p class="lead">
-            Estará pagando poco más de $ 0.50  al día para tener acceso al secreto del Dr. Alejandro para acabar con las celulitis y la flacidez
+            Estará pagando poco más de $ 0.50  al día para tener acceso al secreto del Dr. John para acabar con las celulitis y la flacidez
           </p>
           <br>
           <p class="lead">
@@ -248,7 +248,7 @@
           </p>
           <br>
           <p class="lead fonte1 text-center font-weight-bold">También estarás protegida (o) <br>
-            por el Dr. Alejandro. 
+            por el Dr. John. 
           </p>
           <br>
           <p class="lead">
@@ -264,7 +264,7 @@
           </p>
           <br>
           <p class="lead">
-            Entonces, el Dr. Alejandro insiste en que le devuelvan todo su dinero. Sin preguntas ni bromas. 
+            Entonces, el Dr. John insiste en que le devuelvan todo su dinero. Sin preguntas ni bromas. 
           </p>
           <br>
           <p class="lead">
@@ -280,7 +280,7 @@
           </p>
           <br>
           <p class="lead">
-            Estas son los secretos que el Dr. Alejandro usa personalmente con sus pacientes para mantenerlas delgadas y con un aspecto juvenil. 
+            Estas son los secretos que el Dr. John usa personalmente con sus pacientes para mantenerlas delgadas y con un aspecto juvenil. 
           </p>
           <br>
           <p class="lead">
