--- a/downsell/index.html
+++ b/downsell/index.html
@@ -38,7 +38,7 @@
           </p><br><p class="lead font-weight-bold fonte1 text-center">
             Esto es lo que obtendrá hoy...  
           </p><br><p class="lead">
-           - Plan el fin de la celulites y la flacidez del Dr. Alejandro... (valorado en $ 117)<br>
+           - Plan el fin de la celulites y la flacidez del Dr. John... (valorado en $ 117)<br>
            - Estrías nunca más (valorado en $ 57)
           </p><br><p class="lead fonte1 text-center font-weight-bold">De: <strike class="text-danger">$ 174</strike><br><br><span class="text-primary">$ 9.90</span></p><br><div id="box_hotmart"></div><script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script><script>
 opts = {key: 'USL-75883-209118-bde7c4cdd7a41123d74ab78b95d5eea3',
